# VitaTether

./: .gitignore  CMakeLists.txt  README.md
Server/: Makefile
Server/App/source/: main.c
Server/app/: Makefile
Server/app/source/: main.c
Server/plugin/: CMakeLists.txt  Makefile
Server/source/: main.c
module/: CMakeLists.txt  vitatetherk.yml  vividk.yml
module/include/: vivid-private.h  vivid-user.h
module/source/: main.c
module/src/: main.c
